with search feature

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <h1>Easy Search.</h1>
         <div class="search-box">
             <input type="text" id="src-box" placeholder="Search here...">
-            <button class=".search-btn">Let's Go</button>
+            <button class="search-btn">Let's Go</button>
             <div class="hr-line"></div>
         </div>
         <div class="parent-suggestion">
@@ -32,6 +32,11 @@
                 <p>Lorem ipsum dolor, sit amet consectetur adipisicing.</p>
             </div> -->
         </div>
+        <footer>
+            <h1>Thanks to visit here</h1>
+            <p>copyright@2024</p>
+            <span>developed by @ <a href="https://github.com/rabbihossainlhp/">Rabbi Hossain</a></span>
+        </footer>
     </div>
 
 
